# AccelerometerProcessing

./: Accelerometer.py  ImportEDF.py  LICENSE.txt  README.md  Subject.py  setup.cfg  setup.py
AccelProcessing/: Accelerometer.py  Subject.py
