[metadata]
name = AccelProcessing-kyleweber
version = 0.0.1
author = Kyle Weber
author_email = kyle.weber@uwaterloo.ca
description = GENEActiv accelerometer processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyleweber13/AccelerometerProcessing
project_urls =
    Bug Tracker = https://github.com/kyleweber13/AccelerometerProcessing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6